# abstools

./: .classpath  .dir-locals.el  .dockerignore  .editorconfig  .gitignore  .gitmodules  .project  .travis.yml  CHANGELOG.md  Concept.abs  Concept.hs  Dockerfile  LICENSE.txt  Makefile  NullableExample.abs  README  README.md  RELEASE.md  THIS-REPOSITORY-HAS-MOVED.txt  Vagrantfile  _notes.org  abs2haskell.cabal  build.gradle  gradle.properties  rpc_monitor-20160311_034534.dump  settings.gradle  vagrant-bootstrap.sh
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: compile.yml  test.yml
Documentation/: README  pom.xml
Documentation/ReferenceManual/: Makefile  abslanguage.tex  abslanguage_definitions.tex  absrefmanual.tex  absstdlib.tex  adts.tex  cog-schedulers.tex  deltamodules.tex  effexpr.tex  featuremodel.tex  introduction.tex  lexical.tex  modules.tex  names.tex  pureexpr.tex  resourcemodels.tex  spl-configuration.tex  statements.tex
abs-configurator/de.fhg.iese.hats.configurator/: .classpath  .project  build.properties  plugin.xml
abs-configurator/de.fhg.iese.hats.menu/: .project  plugin.xml
abs-docs/: Makefile  README.md  USAGE  build.gradle  deploy.sh  pom.xml
abs-docs/Ott/: Makefile  Makefile.ext  README.md  _CoqProject  abs-functional-evaluation.ott  abs-functional-syntax.ott  abs-functional-typing.ott  abs-functional.ott  abs-object-syntax.ott  abs-object-typing.ott  abs-runtime-evaluation.ott  abs-runtime-semantics.ott  abs-runtime-syntax.ott  abs-runtime-typing.ott  abs_functional_metatheory.v  core-abs-simplified.ott  core-abs.tex
abs-docs/ReferenceManual/: .gitignore  Makefile  abslanguage_definitions.tex  absstdlib.tex  adts.tex  annotations.tex  bibli.bib  classes.tex  cog-schedulers.tex  def-cmdline.tex  effexpr.tex  featuremodel.tex  functions.tex  lexical.tex  models.tex  preamble.tex  pureexpr.tex  resourcemodels.tex  statements.tex  timedmodels.tex
abs-docs/asciidoc/: backends.adoc  deployment.adoc  developer.adoc  feature-modeling.adoc  functional.adoc  imperative.adoc  index.adoc  introduction.adoc  lexical.adoc  modelapi.adoc  modules.adoc  oo.adoc  schedulers.adoc  stdlib.adoc  timed.adoc  types.adoc  user.adoc
abs-foreign-interface/: .classpath  .project  Brainstorming.org  README
abs-foreign-interface/abs-foreign-util/: .dependencies  pom.xml
abs-foreign-interface/brainstorming/: SkypeConferenceonABSFLI-2011-Apr-20.txt  abs.tex  brainstorming.tex  definitions.tex  java.tex  preamble.tex  scenarios.tex
abs-foreign-interface/examples/: Example.abs  absfli.properties  compileJavaCode  genJavaCode  javatoabs.properties  runJava
abs-frameworks/abs-mvc/: .project  README.md  abs_studikasus.sql  build.bat  build.xml  gen.sh  gen.sql  run.sh
abs-java-observers/: .classpath  .project  build.xml
abs-models.org/: .gitignore  .gitmodules  README.org  config.toml  deploy.sh
abs-packages/: README  abspk
apet-plugin/: .project  build.properties  build.xml  feature.xml  plugin.xml
bbedit/: README  abs.plist
binaries/: README.md
costabs-plugin/: .classpath  .project  build.properties  build.xml  eclipsehome.properties  feature.xml  plugin.xml
doc/: DocABS.txt  TODO.md
docker/: absc.Dockerfile  collaboratory.Dockerfile
easyinterface/: .htaccess
eclipse/: README
eclipse-plugin/: .classpath  .project  README.build  build.properties  build.xml  feature.xml  junit-SchedulingTest.launch  junit-plugin.launch  plugin.xml  site.xml
emacs/: abs-mode.el  maude-mode.el  ob-abs.el  sample.org
eu.hats-project.absm2plugin/: .project  pom.xml
eu.hats-project.parent/: pom.xml
eu.hats-project.repository/: pom.xml
eu.hats-project.site/: .project  publish.sh  site.xml
eu.hatsproject.absplugin.tests/: .project  JARTest.launch  feature.xml
eu.hatsproject.releng/: .project  ABS.target  README.txt  absplugin.psf
examples/: Annotations.abs  BenchLists.abs  BenchLists.hs  BenchMaps.abs  BenchMaps.hs  Classes.abs  Classes.hs  Datatypes.hs  Empty.hs  EmptyNew.abs  EmptyNew.hs  Functions.abs  Functions.hs  HTest.abs  HTest.hs  HTestLists.hs  HTestMaps.hs  HaskellTranslation.abs  HaskellTranslation.hs  HetList.abs  HetList.hs  Imports.abs  Inference.abs  InferenceNum.abs  InstanceGeneration.abs  Interfaces.abs  Interfaces.hs  MultipleTasksPerObject.abs  NewEff.abs  Null1.abs  Parens.abs  Parens.hs  Statements.abs  Statements.hs  SubtypingVolker.abs  Test1.abs  Test1.hs  Test2.abs  Test2.hs  UpcastingInt.abs  (+6 more)
examples/VM/: App.abs  (+6 more)
frontend/: .classpath  .editorconfig  .gitignore  .project  CODING-CONVENTIONS.md  CODING-CONVENTIONS.txt  DEPLOY.txt  DISTRIBUTION.erlang.todo  Dockerfile  HACKING.md  Makefile  PreProcessorConfig.xml  README  README-ECLIPSE.txt  README.erlang.md  README.md  README.object-rollback-exceptions-branch  USAGE  assembly.xml  build.gradle  build.properties  build.xml  changelog.xml  deploy-libs  feature.xml  findbugs-jastadd-filter.xml  junit-deltas.launch  junit-frontend.launch  output.txt  pom.xml  settings.gradle
gradle/: xtext-maven-deployment.gradle  xtext-source-layout.gradle
interpreter/: abs-datatypes.maude  abs-interpreter.maude
javabackend/: .classpath  .project  build.xml
mTVL/: .project  build.xml  pom.xml
mTVL-deprecated/: .project
maven-support/: README  TODO  pom.xml
org.abs-models.abs.plugin.tests/: .project  JARTest.launch  feature.xml
org.abs-models.releng/: .project  ABS.target  README.txt  feature.xml
org.abs_models.xtext/: build.gradle
org.abs_models.xtext.ide/: README.md  build.gradle
org.absmodels.site/: feature.xml
sda-plugin/: .classpath  .project  build.properties  build.xml  eclipsehome.properties  feature.xml  plugin.xml
sdedit-for-abs/: .classpath  .project  build.properties  build.xml  feature.xml
src/: ABS.cf  ABSPrelude.hs  AbsABS.hs  Base.hs  Conf.hs  Core.hs  LexABS.hs  ParABS.hs  Prim.hs  PrintABS.hs  SkelABS.hs  Transpile.hs  Utils.hs
test/: Test.hs
tools-website/: DEPLOY.txt  README  pom.xml
vagrant_scripts/: install_eclipse.sh  install_habs.sh  install_smart_deployer.sh
website/: .vale.ini  README.md  build.gradle
(+4143 files in other folders)
